# geomat-backend

./: Makefile  docker-compose.yml  pyproject.toml
config/: urls.py
config/settings/: common.py  local.py  production.py
docker/dokku/: Dockerfile
docker/local/: Dockerfile.web
geomat_content/: admin.py  apps.py  models.py  serializers.py
geomat_content/migrations/: 0001_initial.py  0002_cleavage_model.py  0003_crystalsystem_model.py  0004_auto_20210226_1031.py  0005_auto_20210226_1042.py  0006_auto_20210226_1046.py  0007_auto_20210422_1248.py  0008_auto_20210906_1809.py  0008_auto_20211010_1757.py  0008_miscellaneous_property.py  0009_auto_20211010_1759.py  0010_auto_20211010_2106.py  0011_property_cleavage_text.py  0012_auto_20211014_1655.py  0013_auto_20211014_1723.py  0014_migrate_to_mediaobject.py  0015_auto_20211018_1645.py  0016_auto_20211018_1705.py  0017_alter_mineraltype_tree_node.py  0018_generalinformation.py  0019_migrate_mineraltype_fields_to_generalinformationpy.py  0020_auto_20231102_1332.py  0021_alter_generalinformation_chemical_formula.py  0022_rename_trivial_name_generalinformation_sub_name.py  0023_rename_variety_generalinformation_variety_name.py  0024_rename_sub_name_generalinformation_trivial_name.py  0025_alter_generalinformation_trivial_name.py
stone_content/: admin.py  apps.py  models.py  serializers.py
stone_content/migrations/: 0001_initial.py  0002_generalinformation.py  0003_characteristic.py  0004_composition.py  0005_emergence.py  0006_rename_alt_name_generalinformation_sub_name.py  0007_auto_20240111_1130.py  (+4 more)
(+1 files in other folders)
