[tool.poetry]
name = "django-docker"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.8.5"
django = "^3.2.1"
gunicorn = "*"
django-environ = "*"
gevent = "*"
whitenoise = "*"
raven = "*"
solid-backend = {version = "^0.3.0", allow-prereleases = true}
djangorestframework = "*"
drf_yasg = "^1.17.1"
django-cors-headers = "^3.4.0"
django-mptt = "^0.11.0"
django-cleanup = "*"
drf-spectacular = "^0.26.2"
django-anymail = "^8.4"
sentry-sdk = "^1.39.2"


[tool.poetry.dev-dependencies]
pytest = "^3.4"
werkzeug = "^1.0.1"
django-debug-toolbar = "^2.2"
ipdb = "^0.13.2"
pytest-django = "^3.9.0"
django-extensions = "^2.2.9"
pytest-isort = "^0.3.1"
pytest-sugar = "^0.9.2"
coverage = "^5.0.4"
django-coverage-plugin = "^1.8.0"
pytest-cov = "^2.8.1"
# black = "^19.10b0"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
black = "22.3.0"

[tool.black]
exclude = '''
/(
    api\/migrations
  | feedback\/migrations
)/
'''
[build-system]
# Should be the same as `$POETRY_VERSION`:
requires = ["poetry>=1.0.5"]

